argo_dockerapp/elk-fluentbit/k8s/elasticsearch-kibana/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logging
  labels:
    app.kubernetes.io/part-of: kyc-logging
